Fix: Bug fix: handles  vs. CPU and vs. Player button text shift on click with no team select.

--- a/tic-tac-toe/styles.css
+++ b/tic-tac-toe/styles.css
@@ -321,7 +321,7 @@ Specific Styles
 }
 
 .opponent-active {
-    display: flex;
+    /* display: flex; */
 }
 
 .opponent-choice-buttons {
